build: aggiorna dipendenze e risolvi warning JavaFX
Aggiunte le librerie TestFX per i test grafici. Risolti i warning inserendo il flag --enable-native-access per i task Gradle.